# simple_backend_axum

./: Cargo.toml  curl-test.txt
src/: main.rs
src/config/: sqllite.rs
src/dto/: hello_world.rs  mod.rs
src/handlers/: hello_world.rs
src/repository/: hello_world_messages.rs  mod.rs
src/services/: hello_world.rs
