[package]
name = "simple_backend_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44", features = ["full"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
